src/test/ui/feature-gates/feature-gate-non_exhaustive.stderr
error[E0658]: non exhaustive is an experimental feature (see issue #44109)
  --> $DIR/feature-gate-non_exhaustive.rs:13:1
   |
LL | #[non_exhaustive] //~ERROR non exhaustive is an experimental feature (see issue #44109)
   | ^^^^^^^^^^^^^^^^^
   |
   = help: add #![feature(non_exhaustive)] to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0658`.
